@@ -2,7 +2,11 @@ package ru.practicum.shareit.item.service;
 
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import ru.practicum.shareit.booking.Status;
+import ru.practicum.shareit.booking.dto.BookingItemDto;
 import ru.practicum.shareit.booking.mapper.BookingMapper;
 import ru.practicum.shareit.booking.model.Booking;
 import ru.practicum.shareit.booking.repository.BookingRepository;
@@ -12,15 +16,18 @@ import ru.practicum.shareit.item.comment.CommentDto;
 import ru.practicum.shareit.item.comment.CommentMapper;
 import ru.practicum.shareit.item.comment.CommentRepository;
 import ru.practicum.shareit.item.dto.ItemBookingDto;
+import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
+import ru.practicum.shareit.request.repository.ItemRequestRepository;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import javax.validation.ValidationException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,39 +38,77 @@ public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
     private final UserRepository userRepository;
     private final BookingRepository bookingRepository;
-
     private final CommentRepository commentRepository;
+    private final ItemRequestRepository itemRequestRepository;
 
     @Override
-    public Item create(Item item, Long userId) {
+    public ItemDto create(Item item, Long userId) {
         validate(item);
         item.setOwner(userRepository.findById(userId).get());
+        if (item.getItemRequest() != null) {
+            item.setItemRequest(itemRequestRepository.findById(item.getItemRequest().getId()).get());
+        }
         Item createItem = itemRepository.save(item);
         log.info("Предмет с id = '{}' добавлен в список", createItem.getId());
-        return createItem;
+        ItemDto createItemDto = ItemMapper.toItemDto(createItem);
+        if (item.getItemRequest() != null) {
+            createItemDto.setRequestId(item.getItemRequest().getId());
+        }
+        return createItemDto;
     }
 
     @Override
-    public List<Item> readAll() {
-        return itemRepository.findAll();
+    public List<Item> readAll(Integer from, Integer size) {
+        if (from < 0 || size <= 0) {
+            log.info("Параметры поиска введены некоректно");
+            throw new IllegalArgumentException("Параметры поиска введены некоректно");
+        }
+        Pageable pageable = PageRequest.of(from / size, size);
+        return itemRepository.findAll(pageable).toList();
     }
 
     @Override
-    public List<ItemBookingDto> readAllByUserId(Long id) {
-        return itemRepository
-                .findAllByOwner(userRepository.findById(id).get())
-                .stream()
-                .map(this::addLastAndNextBooking)
-                .collect(Collectors.toList());
+    public List<ItemBookingDto> readAllByUserId(Long id, Integer from, Integer size) {
+        if (from < 0 || size <= 0) {
+            log.info("Параметры поиска введены некоректно");
+            throw new IllegalArgumentException("Параметры поиска введены некоректно");
+        }
+        Pageable pageable = PageRequest.of(from / size, size);
+
+        Map<Item, List<Comment>> comments =
+                commentRepository.findAll().stream().collect(Collectors.groupingBy(Comment::getItem));
+        Map<Item, List<Booking>> bookings = bookingRepository.findAllByStatusOrderByStartDesc(Status.APPROVED).stream()
+                .collect(Collectors.groupingBy(Booking::getItem));
+
+        List<Item> items = itemRepository.findAllByOwner(userRepository.findById(id).get(), pageable).toList();
+
+        List<ItemBookingDto> itemsBookingDto = new ArrayList<>();
+
+        for (Item item : items) {
+            ItemBookingDto itemBookingDto = ItemMapper.toItemWishBookingAndCommentDto(item, null,
+                    null, List.of());
+            if (bookings.containsKey(item)) {
+                itemBookingDto = addLastAndNextBooking(item, bookings.get(item), List.of());
+            }
+            if (comments.containsKey(item)) {
+                List<CommentDto> commentsDto = comments.get(item)
+                        .stream()
+                        .map(CommentMapper::toCommentDto)
+                        .collect(Collectors.toList());
+                itemBookingDto.setComments(commentsDto);
+            }
+            itemsBookingDto.add(itemBookingDto);
+        }
+        return itemsBookingDto;
     }
 
     @Override
     public Item update(Long id, Item item, Long userId) {
-        if (itemRepository.findById(id).get().getOwner() != userRepository.findById(userId).get()) {
-            throw new EntityNotFoundException("EntityNotFoundException (Предмет не может быть обновлен, т.к. он " +
-                    "не принадлежит данному пользователь)");
-        }
         if (itemRepository.findById(id).isPresent()) {
+            if (itemRepository.findById(id).get().getOwner() != userRepository.findById(userId).get()) {
+                throw new EntityNotFoundException("EntityNotFoundException (Предмет не может быть обновлен, т.к. он " +
+                        "не принадлежит данному пользователю)");
+            }
             if (item.getName() != null) {
                 itemRepository.findById(id).get().setName(item.getName());
             }
@@ -92,21 +137,22 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
-    public ItemBookingDto getItemByUserId(Long id, Long userId) {
-        if (itemRepository.findById(id).isEmpty()) {
-            throw new EntityNotFoundException(String.format("Предмет с id = %d отсутствует в списке", id));
+    public ItemBookingDto getItemByUserId(Long itemId, Long userId) {
+        if (itemRepository.findById(itemId).isEmpty()) {
+            throw new EntityNotFoundException(String.format("Предмет с id = %d отсутствует в списке", itemId));
         } else {
-            Item item = itemRepository.findById(id).get();
+            Item item = itemRepository.findById(itemId).get();
+            List<Comment> comments = commentRepository.findAllByItem(itemRepository.findById(itemId).get());
             if (item.getOwner().equals(userRepository.findById(userId).get())) {
-                return addLastAndNextBooking(item);
-            } else {
-                List<Comment> comments = commentRepository.findAllByItem(itemRepository.findById(id).get());
-                List<CommentDto> commentsDto = new ArrayList<>();
-                for (Comment comment : comments) {
-                    CommentDto commentDto = CommentMapper.toCommentDto(comment);
-                    commentsDto.add(commentDto);
+                List<Booking> bookings =
+                        bookingRepository.findAllByItem_IdOrderByStartDesc(itemId);
+                if (bookings.size() != 0) {
+                    return addLastAndNextBooking(item, bookings, comments);
+                } else {
+                    return addLastAndNextBooking(item, List.of(), comments);
                 }
-                return ItemMapper.toItemWishBookingAndCommentDto(item, null, null, commentsDto);
+            } else {
+                return addLastAndNextBooking(item, List.of(), comments);
             }
         }
     }
@@ -122,11 +168,21 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
-    public List<Item> findItemsByText(String text) {
+    public List<ItemDto> findItemsByText(String text, Integer from, Integer size) {
+        if (from < 0 || size <= 0) {
+            log.info("Параметры поиска введены некоректно");
+            throw new IllegalArgumentException("Параметры поиска введены некоректно");
+        }
+        Pageable pageable = PageRequest.of(from / size, size);
         if (text.isEmpty() && text.isBlank()) {
             return new ArrayList<>();
         } else {
-            return itemRepository.findByNameOrDescriptionContainingIgnoreCaseAndAvailableIsTrue(text, text);
+            List<Item> items = itemRepository.findByNameOrDescriptionContainingIgnoreCaseAndAvailableIsTrue(text, text,
+                    pageable).toList();
+            return items
+                    .stream()
+                    .map(ItemMapper::toItemDto)
+                    .collect(Collectors.toList());
         }
     }
 
@@ -163,23 +219,27 @@ public class ItemServiceImpl implements ItemService {
         }
     }
 
-    private ItemBookingDto addLastAndNextBooking(Item item) {
-        ItemBookingDto itemBookingDto = ItemMapper.toItemWishBookingAndCommentDto(item, null,
-                null, null);
-        Booking lastBooking = bookingRepository.findByItemAndEndBeforeOrderByEndDesc(item, LocalDateTime.now());
-        if (lastBooking != null) {
-            itemBookingDto.setLastBooking(BookingMapper.toShortDto(lastBooking));
+    private ItemBookingDto addLastAndNextBooking(Item item, List<Booking> bookings, List<Comment> comments) {
+        ItemBookingDto itemBookingDto = ItemMapper.toItemWishBookingAndCommentDto(item, null, null,
+                null);
+        List<BookingItemDto> lastBookings = bookings.stream()
+                .filter(booking -> booking.getEnd().isBefore(LocalDateTime.now()))
+                .map(BookingMapper::toShortDto)
+                .collect(Collectors.toList());
+        if (lastBookings.size() != 0) {
+            itemBookingDto.setLastBooking(lastBookings.get(0));
         }
-        Booking nextBooking = bookingRepository.findByItemAndStartAfterOrderByStart(item, LocalDateTime.now());
-        if (nextBooking != null) {
-            itemBookingDto.setNextBooking(BookingMapper.toShortDto(nextBooking));
+        List<BookingItemDto> nextBookings = bookings.stream()
+                .filter(booking -> booking.getStart().isAfter(LocalDateTime.now()))
+                .map(BookingMapper::toShortDto)
+                .collect(Collectors.toList());
+        if (nextBookings.size() != 0) {
+            itemBookingDto.setNextBooking(nextBookings.get(nextBookings.size() - 1));
         }
-        List<Comment> comments = commentRepository.findAllByItem(item);
-        List<CommentDto> commentsDto = new ArrayList<>();
-        for (Comment comment : comments) {
-            CommentDto commentDto = CommentMapper.toCommentDto(comment);
-            commentsDto.add(commentDto);
-        }
+        List<CommentDto> commentsDto = comments
+                .stream()
+                .map(CommentMapper::toCommentDto)
+                .collect(Collectors.toList());
         itemBookingDto.setComments(commentsDto);
         return itemBookingDto;
     }
